--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toast-component-module",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "license": "MIT",
@@ -24,10 +24,11 @@
     "rimraf": "^2.6.3"
   },
   "dependencies": {
-    "styled-components": "^4.1.3",
+    "color": "^3.1.0",
     "color-pallete-component-module": "https://4c4f37bb6657744cab12a1d1c42e40ef1252aa1c:x-oauth-basic@github.com/redwallsolutions/color-pallete-component-module",
-    "theming-component-module": "https://4c4f37bb6657744cab12a1d1c42e40ef1252aa1c:x-oauth-basic@github.com/redwallsolutions/theming-component-module",
-    "color": "^3.1.0"
+    "izitoast": "^1.4.0",
+    "styled-components": "^4.1.3",
+    "theming-component-module": "https://4c4f37bb6657744cab12a1d1c42e40ef1252aa1c:x-oauth-basic@github.com/redwallsolutions/theming-component-module"
   },
   "browserslist": [
     ">0.2%",
