--- a/package.json
+++ b/package.json
@@ -1,39 +1,48 @@
 {
-  "name": "toast-component-module",
-  "version": "1.1.1",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "license": "MIT",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "start": "react-scripts start",
-    "build-examples": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "build": "rimraf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-react": "^7.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1",
-    "rimraf": "^2.6.3"
-  },
-  "dependencies": {
-    "color": "^3.1.0",
-    "color-pallete-component-module": "https://cf2066736ce8712fe9044d7176daa1edea6c4fe9:x-oauth-basic@github.com/redwallsolutions/color-pallete-component-module",
-    "izitoast": "^1.4.0",
-    "styled-components": "^4.1.3",
-    "theming-component-module": "https://cf2066736ce8712fe9044d7176daa1edea6c4fe9:x-oauth-basic@github.com/redwallsolutions/theming-component-module"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "@redwallsolutions/toast-component-module",
+	"version": "1.1.1",
+	"main": "dist/index.js",
+	"module": "dist/index.js",
+	"type": "dist/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"license": "MIT",
+	"scripts": {
+		"start": "rimraf demo/output && parcel demo/index.html -d demo/output --open",
+		"test": "echo \"No test specified.\"",
+		"docz:dev": "docz dev",
+		"docz:build": "docz build",
+		"build": "rimraf dist && tsc",
+		"deploy": "rimraf demo/output && yarn docz:build && gh-pages -d demo/output"
+	},
+	"repository": "https://github.com/redwallsolutions/toast-component-module",
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org",
+		"access": "public"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.7.2",
+		"@types/color": "^3.0.0",
+		"@types/numeral": "^0.0.26",
+		"@types/react": "^16.9.11",
+		"@types/react-dom": "^16.9.4",
+		"@types/styled-components": "^4.1.22",
+		"babel-preset-react-app": "^9.0.2",
+		"docz": "^2.0.0-rc.75",
+		"gh-pages": "^2.1.1",
+		"parcel-bundler": "^1.12.4",
+		"react": "^16.11.0",
+		"react-dom": "^16.11.0",
+		"react-icons": "^3.8.0",
+		"rimraf": "^2.6.3",
+		"typescript": "^3.7.2"
+	},
+	"dependencies": {
+		"@redwallsolutions/common-interfaces-ts": "^1.0.2",
+		"@redwallsolutions/theming-component-module": "^2.0.2",
+		"color": "^3.1.2",
+		"izitoast": "^1.4.0",
+		"styled-components": "^4.4.1"
+	}
 }
